[gd_scene load_steps=5 format=3 uid="uid://dit4qpc8v33p6"]

[ext_resource type="Theme" uid="uid://8xsyb1abhsla" path="res://recources/menu_UI.tres" id="1_wxemc"]
[ext_resource type="Script" path="res://Scripts/MainMenu.gd" id="2_o1y8q"]
[ext_resource type="AudioStream" uid="uid://cwlbv8d182vpp" path="res://SFX/click.wav" id="3_mcsvh"]

[sub_resource type="LabelSettings" id="LabelSettings_wbqog"]
font_size = 64

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_wxemc")
script = ExtResource("2_o1y8q")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 0
offset_top = 192.0
offset_right = 640.0
offset_bottom = 368.0
theme = ExtResource("1_wxemc")

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/MarginContainer"]
layout_mode = 2

[node name="Play" type="Button" parent="CenterContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_wxemc")
text = "Play"

[node name="Settings" type="Button" parent="CenterContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="click" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_mcsvh")
bus = &"Sound effects"

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_right = 640.0
offset_bottom = 192.0
text = "Dude with a Cloak"
label_settings = SubResource("LabelSettings_wbqog")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="mouse_entered" from="CenterContainer/MarginContainer/VBoxContainer/Play" to="." method="_on_play_mouse_entered"]
[connection signal="pressed" from="CenterContainer/MarginContainer/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="mouse_entered" from="CenterContainer/MarginContainer/VBoxContainer/Settings" to="." method="_on_settings_mouse_entered"]
[connection signal="pressed" from="CenterContainer/MarginContainer/VBoxContainer/Settings" to="." method="_on_settings_pressed"]
